--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,63 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
+  
+  <build>
+    <plugins>
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.3</version>
+            <executions>
+                <execution>
+                <id>coverage-initialize</id>
+                <goals>
+                    <goal>prepare-agent</goal>
+                </goals>
+                </execution>
+                <execution>
+                <id>coverage-report</id>
+                <phase>post-integration-test</phase>
+                <goals>
+                    <goal>report</goal>
+                </goals>
+                </execution>
+                <!-- Threshold -->
+                <execution>
+                <id>coverage-check</id>
+                <goals>
+                    <goal>check</goal>
+                </goals>
+                <configuration>
+                    <rules>
+                    <rule>
+                        <element>CLASS</element>
+                        <excludes>
+                        <exclude>com.asimio.demo.Application</exclude>
+                        </excludes>
+                        <limits>
+                        <limit>
+                            <counter>LINE</counter>
+                            <value>COVEREDRATIO</value>
+                            <minimum>80%</minimum>
+                        </limit>
+                        </limits>
+                    </rule>
+                    </rules>
+                </configuration>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+               <argLine>@{argLine} -more -arguments</argLine>
+            ...
+            </configuration>
+        </plugin>
+    </plugins>
+  </build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -22,4 +78,5 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+ 
 </project>
